style: fix button background color on iphones

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -34,6 +34,10 @@ button, input {
     border: none;
 }
 
+button {
+    background-color: #eee;
+}
+
 a, a:active, a:visited {
 	color: #8080FF;
 }
